--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_statusbar_manager:
+  flutter_speed_dial:
 dev_dependencies:
   flutter_test:
     sdk: flutter
